--- a/Project 1/style.css
+++ b/Project 1/style.css
@@ -5,6 +5,85 @@
 }
 
 html, body{
-    height: 100vh;
+    height: 100%;
+    width: 100%;
+}
+
+.main{
     width: 100vw;
+    height: 100vh;
+    /* background-color: crimson; */
+    display: grid;
+    grid-template-columns: 25% 25% 50%;
+    grid-template-rows: 27% 55% 18%;
+
+}
+
+.left-top-left{
+    /* background-color: red; */
+}
+
+.square{
+    margin: 15px 0px 0px 50px;
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    rotate: 45deg;
+}
+
+
+.left-top-right{
+    /* background-color: orange; */
+    justify-self: right;
+    padding: 13px 30px 0px 0px;
+    text-align: right;
+}
+
+.left-top-right h4{
+    /* background-color: green; */
+    padding-bottom: 40px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.left-top-right h5{
+    font-size: 18px;
+    font-weight: 500;
+}
+
+
+.left-center{
+    /* background-color: yellow; */
+    grid-column: 1/3;
+    padding: 30px 60px;
+}
+
+.left-center h1{
+    font-size: 7vw;
+    text-transform: uppercase;
+    line-height: 6.2vw;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.left-center h1:nth-child(2n){
+    text-align: right;
+}
+
+
+.left-bottom{
+    /* background-color: blue; */
+    grid-column: 1/3;
+    padding: 30px;
+}
+
+.left-bottom p{
+    width: 70%;
+}
+
+
+.right{
+    background-color: green;
+    grid-column: 3 / 4;
+    grid-row: 1/4;
 }
